[FEAT/#50] 실제 LLM 기사 분석 및 sentence SSOT 구축
Gemini와 Mindlogic 구조화 출력, evidence 검증 및 1회 복구를 구현한다.\n분석 출처와 메타데이터를 finding에 저장하고 기사 상세 문장 SSOT를 일치시킨다.